--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   min-height: 100vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   color: rgb(16, 6, 44);
@@ -23,7 +24,7 @@
     rgba(255, 255, 255, 0.3),
     rgba(255, 255, 255, 0.5)
   );
-  backdrop-filter: blur(0.3rem);
+  backdrop-filter: blur(0.5rem);
   border-radius: 1rem;
   padding: 2.5rem 2rem;
   display: flex;
@@ -103,7 +104,10 @@ img.temp-icon {
 .hidden {
   display: none;
 }
-
+.copyright {
+  margin-top: 2rem;
+  opacity: 0.5;
+}
 @media only screen and (max-width: 1200px) {
   .weather-app {
     width: 60%;
